# dict

./: .gitignore  ChangeLog  ChangeLog.1  ChangeLog.2  ChangeLog.3  Makefile  README.md  SKK-JISYO.JIS2  SKK-JISYO.JIS2.gz.md5  SKK-JISYO.JIS2004  SKK-JISYO.JIS2004.gz.md5  SKK-JISYO.JIS3_4  SKK-JISYO.JIS3_4.gz.md5  SKK-JISYO.L.gz.md5  SKK-JISYO.L.unannotated  SKK-JISYO.L.unannotated.gz.md5  SKK-JISYO.M  SKK-JISYO.M.gz.md5  SKK-JISYO.ML  SKK-JISYO.ML.gz.md5  SKK-JISYO.S  SKK-JISYO.S.gz.md5  SKK-JISYO.assoc  SKK-JISYO.assoc.gz.md5  SKK-JISYO.china_taiwan  SKK-JISYO.china_taiwan.gz.md5  SKK-JISYO.china_taiwan.header  SKK-JISYO.edict  SKK-JISYO.edict.tar.gz.md5  SKK-JISYO.edict2  SKK-JISYO.emoji  SKK-JISYO.emoji.predef  SKK-JISYO.fullname  SKK-JISYO.fullname.gz.md5  SKK-JISYO.geo  SKK-JISYO.geo.gz.md5  SKK-JISYO.hukugougo  SKK-JISYO.itaiji  SKK-JISYO.itaiji.JIS3_4  SKK-JISYO.itaiji.JIS3_4.gz.md5  (+36 more)
csv/: china_taiwan.csv
euc-jis-2004/: SKK-JISYO.JIS2004
euc-jp/: SKK-JISYO.JIS2  SKK-JISYO.ML  SKK-JISYO.china_taiwan.header  SKK-JISYO.geo  SKK-JISYO.itaiji  SKK-JISYO.jinmei  SKK-JISYO.law  SKK-JISYO.lisp  SKK-JISYO.notes  SKK-JISYO.propernoun  SKK-JISYO.pubdic+  SKK-JISYO.wrong
json/: SKK-JISYO.JIS2.json  SKK-JISYO.M.json  SKK-JISYO.ML.json  SKK-JISYO.S.json  SKK-JISYO.assoc.json  SKK-JISYO.china_taiwan.json  SKK-JISYO.edict.json  (+13 more)
zipcode/: .gitignore  Makefile.in  README.ja  README.md  SKK-JISYO.office.zipcode  SKK-JISYO.zipcode  ZIPCODE-MK  configure  configure.ac  words.zipcode  zipcode-split.ts  zipcode.ts
zipcode/test/: all-tests.el  zipcode-test.el  zipcode-test.sh.in
(+67 files in other folders)
